maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:36: error: ':' expected but ')' found.
def isDirectionFree(dir):Boolean={
                       ^Escaper:40: error: identifier expected but '}' found.
}
^