maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  while(!estSurBiscuit()){
  	GaucheMur()
    droite()
    if(!estFaceMur){
      avance()
      if(estSurBiscuit()){
        prendBiscuit()
      }
      recule()
   	}
    gauche()
  }
  prendBiscuit()
}

def GaucheMur(){
  var sommeAngle = 0
  gauche()
  sommeAngle = sommeAngle-1
  if(estFaceMur){
    droite()
    sommeAngle = sommeAngle+1
  	while(estFaceMur()){
    	droite()
      sommeAngle = sommeAngle+1
  	}
    avance()
  }
  else{
      avance()
  }
}

def isDirectionFree(dir):Boolean={
  
}